# Megan-Experiment

./: README.md
Explicit-MATLAB/animation/: Animation.m  cosine.txt  q_data_cosine.txt
Explicit-MATLAB/examples/: main_FK_iiwa14.m
Explicit-MATLAB/helpers_geometry/: H_to_Adj.m  H_to_invAdj.m  expSE3.m  expSO3.m  vec_to_se3.m
Sensor_app/prints/: Angle_-10_Trial_1_20260306_190301.txt  Angle_-10_Trial_2_20260306_192251.txt  Angle_-10_Trial_3_20260308_204855.txt  Angle_-10_Trial_4_20260308_211835.txt  Angle_-10_Trial_5_20260308_215443.txt  Angle_-20_Trial_1_20260306_190321.txt  Angle_-20_Trial_2_20260306_192358.txt  Angle_-20_Trial_3_20260308_205004.txt  Angle_-20_Trial_4_20260308_211701.txt  Angle_-20_Trial_5_20260308_215218.txt  Angle_-30_Trial_1_20260306_190338.txt  Angle_-30_Trial_2_20260306_192419.txt  Angle_-30_Trial_3_20260308_205106.txt  Angle_-30_Trial_4_20260308_211618.txt  Angle_-30_Trial_5_20260308_215134.txt  Angle_-40_Trial_3_20260308_205211.txt  Angle_-40_Trial_4_20260308_211127.txt  Angle_-40_Trial_5_20260308_215037.txt  Angle_-50_Trial_3_20260308_205303.txt  Angle_-50_Trial_4_20260308_211007.txt  Angle_-50_Trial_5_20260308_213531.txt  Angle_0_Trial_1000_20260312_183019.txt  Angle_0_Trial_100_20260312_182331.txt  Angle_0_Trial_10_20260312_182311.txt  Angle_0_Trial_1_20260306_190027.txt  Angle_0_Trial_2_20260306_192033.txt  Angle_0_Trial_3_20260308_204019.txt  Angle_0_Trial_4_20260308_210837.txt  Angle_0_Trial_5_20260308_220333.txt  Angle_10_Trial_1_20260306_190055.txt  Angle_10_Trial_2_20260306_192109.txt  Angle_10_Trial_3_20260308_204222.txt  Angle_10_Trial_4_20260308_211530.txt  Angle_10_Trial_5_20260308_220256.txt  Angle_20_Trial_1_20260306_190127.txt  Angle_20_Trial_2_20260306_192149.txt  Angle_20_Trial_2_20260306_192337.txt  Angle_20_Trial_3_20260308_204349.txt  Angle_20_Trial_4_20260308_211447.txt  Angle_20_Trial_5_20260308_220158.txt  (+16 more)
Sensor_app/src/: CMakeLists.txt  main.cpp
